[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Menu Screens/Levels.gd" type="Script" id=1]
[ext_resource path="res://Assets/levelScreen/level1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Font/PlayfairDisplay-VariableFont_wght.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/background.png" type="Texture" id=4]
[ext_resource path="res://Assets/levelScreen/lockedLevel.png" type="Texture" id=5]
[ext_resource path="res://Assets/levelScreen/level2.png" type="Texture" id=6]
[ext_resource path="res://Assets/levelScreen/highlight.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 44.6403, 36.9222 )

[sub_resource type="DynamicFont" id=2]
size = 13
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 51.8932, 37.46 )

[node name="Levels" type="Node2D"]
position = Vector2( 0, -0.280609 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 162.353, 43.4181 )
scale = Vector2( 0.591672, 0.591672 )
texture = ExtResource( 4 )

[node name="Level1Area" type="Area2D" parent="."]
position = Vector2( 16.0459, -27.6083 )

[node name="highlight" type="Sprite" parent="Level1Area"]
visible = false
position = Vector2( 54.6267, 73.3862 )
scale = Vector2( 1.37239, 0.823023 )
texture = ExtResource( 7 )

[node name="Level1" type="Sprite" parent="Level1Area"]
position = Vector2( 54.4977, 73.8319 )
scale = Vector2( 0.166119, 0.166119 )
texture = ExtResource( 2 )

[node name="level1Collision" type="CollisionShape2D" parent="Level1Area"]
position = Vector2( 54.674, 73.1594 )
shape = SubResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 5.44215
margin_top = 150.769
margin_right = 58.4422
margin_bottom = 175.769
custom_fonts/font = SubResource( 2 )
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level2Area" type="Area2D" parent="."]
position = Vector2( 88.0163, -27.1364 )

[node name="highlight" type="Sprite" parent="Level2Area"]
visible = false
position = Vector2( 171.256, 70.8894 )
scale = Vector2( 1.71707, 1.18744 )
texture = ExtResource( 7 )

[node name="Level2" type="Sprite" parent="Level2Area"]
position = Vector2( 171.924, 72.0087 )
scale = Vector2( 0.091084, 0.091084 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level2Area"]
position = Vector2( 170.369, 73.8582 )
shape = SubResource( 3 )

[node name="level2lock" type="Sprite" parent="Level2Area"]
position = Vector2( 170.251, 73.0323 )
scale = Vector2( 1.6821, 1.24703 )
texture = ExtResource( 5 )

[node name="Level3Area" type="Area2D" parent="."]
position = Vector2( -7.07907, 58.7562 )

[node name="highlight" type="Sprite" parent="Level3Area"]
position = Vector2( 171.447, 72.7294 )
scale = Vector2( 1.67523, 1.14908 )
texture = ExtResource( 7 )

[node name="Level3" type="Sprite" parent="Level3Area"]
position = Vector2( 171.924, 72.0087 )
scale = Vector2( 0.091084, 0.091084 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level3Area"]
position = Vector2( 170.369, 73.8582 )
shape = SubResource( 3 )

[node name="level3lock" type="Sprite" parent="Level3Area"]
position = Vector2( 170.723, 73.7402 )
scale = Vector2( 1.6821, 1.24703 )
texture = ExtResource( 5 )
[connection signal="mouse_entered" from="Level1Area" to="." method="_on_Level1Area_mouse_entered"]
[connection signal="mouse_exited" from="Level1Area" to="." method="_on_Level1Area_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="mouse_entered" from="Level2Area" to="." method="_on_Level2Area_mouse_entered"]
[connection signal="mouse_exited" from="Level2Area" to="." method="_on_Level2Area_mouse_exited"]
[connection signal="mouse_entered" from="Level3Area" to="." method="_on_Level3Area_mouse_entered"]
[connection signal="mouse_exited" from="Level3Area" to="." method="_on_Level3Area_mouse_exited"]
